--- a/app/src/main/res/menu/menu_pod.xml
+++ b/app/src/main/res/menu/menu_pod.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@id/clear_view"
-        android:title="Wyczyść" />
+        android:title="Wyczyść"
+        android:icon="@drawable/ic_clear_image"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/save"
         android:title="Zapis"
+        android:icon="@drawable/ic_save_file"
+        app:showAsAction="always"
 
         ></item>
     <item
