--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,17 @@
         android:paddingTop="10dp"
         android:gravity="center_horizontal"/>
 
+        <TextView
+            android:id="@+id/toDoList"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground"
+            android:text="TODO List"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:gravity="center_horizontal"/>
+
 
     </LinearLayout>
 
