--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,17 @@
             android:paddingTop="10dp"
             android:gravity="center_horizontal"/>
 
+        <TextView
+            android:id="@+id/books"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground"
+            android:text="Books"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:gravity="center_horizontal"/>
+
 
     </LinearLayout>
 
