--- a/app/src/main/res/layout/single_page_books.xml
+++ b/app/src/main/res/layout/single_page_books.xml
@@ -5,7 +5,14 @@
 
     <ImageView
         android:id="@+id/books_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="400dp" />
+
+    <CheckBox
+           android:id="@+id/isRead"
+            android:layout_marginLeft="10dp"
+            android:text="Przeczytałem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
 </LinearLayout>
