--- a/app/src/main/res/layout/books_activity.xml
+++ b/app/src/main/res/layout/books_activity.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
     android:id="@+id/books_viewpager"
