add mvp example

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,16 @@
             android:paddingTop="10dp"
             android:gravity="center_horizontal"/>
 
+        <TextView
+            android:id="@+id/mvp"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground"
+            android:text="MvP"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:gravity="center_horizontal"/>
 
     </LinearLayout>
 
